--- a/Module 7/Gibbs Samplers.Rmd
+++ b/Module 7/Gibbs Samplers.Rmd
@@ -258,9 +258,9 @@ The densities $f_1, ..., f_p$ are called the *full conditionals*, and a particul
 ### Bayesian Change-Point Analysis
 
 
-Let's try to model a more interesting example, a time series of recorded coal mining disasters in the UK from 1851 to 1962, for $n = 111$ years of data.
-Occurrences of disasters in the time series is thought to be derived from a Poisson process with a large rate parameter in the early part of the time series, and from one with a smaller rate in the later part. We are interested in locating the change point in the series, which perhaps is related to changes in mining 
-safety regulations.
+Let's try to model a more interesting example, a time series of recorded coal mining disasters in the UK from 1851 to 1962, for $n = 111$ years of data. 
+This analysis will follow the analysis layed out by Carlin et al in *Hierarchical Bayesian Analysis of Changepoint Problems*. 
+Occurrences of disasters in the time series is thought to be derived from a Poisson process with a drop rate parameter in the later part of the time series. We are interested in locating the change point, $k$, in the series.
 
 
 
@@ -294,7 +294,7 @@ $$
 
 The modeling problem revolves around estimating the values of the $\lambda$ parameters. 
 Looking at the time series above, it appears that the rate declines later in the time series.
-A changepoint model identifies a point (year) during the observation period (call it $k$) after which the 
+A changepoint model identifies a point (year) during the observation period ($k$) after which the 
 parameter $\lambda$ drops to a lower value. So we are estimating two $\lambda$ parameters: 
 one for the early period and another for the late period.
 
@@ -382,15 +382,17 @@ set.seed(123)
 y = data_vector
 # Gibbs sampler for the coal mining change point
 # initialization
-n <- length(y)
- #length of the data
-m <- 10^4
- #length of the chain
-mu <- numeric(m)
-lambda <- numeric(m)
+n <- length(y) #length of the data
+m <- 10^4 #length of the chain
+
+## vectors to hold data
+mu <- numeric(m) 
+lambda <- numeric(m) 
 k <- numeric(m)
 L <- numeric(n)
-k[1] <- sample(1:n, 1) ## tau
+
+## initial values
+k[1] <- sample(1:n, 1) ## change-points
 mu[1] <- 1
 lambda[1] <- 1
 a = 0.5
@@ -451,16 +453,26 @@ for (t in 2:m){
 ```
 
 
-
+Set a burn-in of 1000 samples. We will use burn in to toss out "poor" samples from out Markov chain. Arguments for and against burn-in vary. Statisticians, Andrew Gelman ([Burn-in Man](http://andrewgelman.com/2008/09/06/burnin_man/)) and Charlie Geyer ([Burn-In](http://users.stat.umn.edu/~geyer/mcmc/burn.html)) provide some commentary on burn-in.
 
 ```{r}
 ## set burn in
 burn_in <- 1000
+## will toss out first 1000 samples
 
-j <- k[burn_in:m]
+K <- k[burn_in:m]
 
-print(mean(k[burn_in:m]))
+## mean
+print(mean(K))
 #[1] 39.935
+
+## mode
+print(which.max(table(K)))
+
+plot(K, type="l", col="gray", main = "Change-Point",
+     xlab="Iteration", ylab = "K")
+lines(1:length(K), cumsum(K) / (1:length(K)))
+
 
 print(mean(lambda[burn_in:m]))
 #[1] 0.9341033
@@ -472,22 +484,19 @@ print(mean(mu[burn_in:m]))
 
 ## Code for Figure 9.12 on page 276
 # histograms from the Gibbs sampler output
-par(mfrow=c(2,3))
-labelk <- "changepoint"
-label1 <- paste("mu", round(mean(mu[burn_in:m]), 1))
-label2 <- paste("lambda", round(mean(lambda[burn_in:m]), 1))
+par(mfrow=c(1,3))
 
-hist(mu[burn_in:m], main="", xlab=label1, 
+hist(mu[burn_in:m], main="", xlab = expression(mu), 
      col="gray", border="white",
      breaks = "scott", prob=TRUE) #mu posterior
 
-hist(lambda[burn_in:m], main="", xlab=label2,
+hist(lambda[burn_in:m], main="", xlab = expression(lambda),
      col="gray", border="white",
      breaks = "scott", prob=TRUE) #lambda posterior
 
-hist(j, breaks=min(j):max(j), prob=TRUE, main="",
+hist(K, breaks=min(K):max(K), prob=TRUE, main="",
      col="gray", border="white",
-     xlab = labelk)
+     xlab = "k")
 
 par(mfcol=c(1,1), ask=FALSE) #restore display
 
@@ -497,7 +506,7 @@ par(mfcol=c(1,1), ask=FALSE) #restore display
 
 
 
-
+Our analysis can be used to justify that the change point occurs at some range at the $41^{st}$ year, 1891, which is similar to other analyses cited by Carlin et al.
 
 
 
